@@ -1,16 +1,17 @@
 #!/bin/bash
 
-SCRIPTDIR=$(dirname ${BASH_SOURCE[0]})
+. "$(dirname ${BASH_SOURCE[0]})/InitializeEnvironment.sh"
 
-# Install GVFS-aware Git (that was downloaded by the build script)
-GITVERSION="$($SCRIPTDIR/GetGitVersionNumber.sh)"
-ROOTDIR=$SCRIPTDIR/../../..
-GITDIR=$ROOTDIR/packages/gitformac.gvfs.installer/$GITVERSION/tools
-if [[ ! -d $GITDIR ]]; then
+# Ensure the kext isn't loaded before installing Git
+$VFS_SRCDIR/ProjFS.Mac/Scripts/UnloadPrjFSKext.sh
+
+# Install GVFS-aware Git (that was published by the build script)
+GITPUBLISH=$VFS_OUTPUTDIR/Git
+if [[ ! -d $GITPUBLISH ]]; then
     echo "GVFS-aware Git package not found. Run BuildGVFSForMac.sh and try again"
     exit 1
 fi
-hdiutil attach $GITDIR/*.dmg || exit 1
+hdiutil attach $GITPUBLISH/*.dmg || exit 1
 GITPKG="$(find /Volumes/Git* -type f -name *.pkg)" || exit 1
 sudo installer -pkg "$GITPKG" -target / || exit 1
 hdiutil detach /Volumes/Git*
@@ -36,16 +37,12 @@ fi
 
 git-credential-manager install
 
-# If our Java version is 9+ (the formatting of 'java -version' changed in Java 9), work around
-# https://github.com/Microsoft/Git-Credential-Manager-for-Mac-and-Linux/issues/71
-JAVAVERSION="$(java -version 2>&1 | egrep -o '"[[:digit:]]+.[[:digit:]]+.[[:digit:]]+"' | xargs)"
-if [[ ! -z $JAVAVERSION ]]; then
-    git config --global credential.helper "!/usr/bin/java -Ddebug=false --add-modules java.xml.bind -Djava.net.useSystemProxies=true -jar /usr/local/Cellar/git-credential-manager/2.0.3/libexec/git-credential-manager-2.0.3.jar" || exit 1
-fi
+$VFS_SCRIPTDIR/InstallSharedDataQueueStallWorkaround.sh || exit 1
 
 # If we're running on an agent where the PAT environment variable is set and a URL is passed into the script, add it to the keychain.
 PATURL=$1
 PAT=$2
 if [[ ! -z $PAT && ! -z $PATURL ]] ; then
+    security delete-generic-password -s "gcm4ml:git:$PATURL"
     security add-generic-password -a "Personal Access Token" -s "gcm4ml:git:$PATURL" -D Credential -w $PAT || exit 1
 fi
